--- a/AbdulrhmanBookStore/Areas/Admin/Views/Category/Index.cshtml
+++ b/AbdulrhmanBookStore/Areas/Admin/Views/Category/Index.cshtml
@@ -23,5 +23,13 @@
         </thead>
     </table>
 </div>
+<div class=" text-center">
+    <a href="/Admin/Catgory/Upsert/id" class="btn btn-success text-white" style="cursor:pointer">
+        <i class="fas fa-edit"></i>&nbsp;
+    </a>
+    <a class="btn btn-danger text-white" style="cursor:pointer">
+        <i class=" fas fa-trash-alt"></i>&nbsp;
+    </a>
+</div>
 
 
