--- a/AbdulrhmanBookStore/Areas/Admin/Views/Category/Index.cshtml
+++ b/AbdulrhmanBookStore/Areas/Admin/Views/Category/Index.cshtml
@@ -8,8 +8,9 @@
         <h2 class="text-primary">Category List </h2>
     </div>
     <div class="col-6 text-right">
-        <a class="btn btn-primary"><i class="fas fa-plus"></i> &nbsp; Create New Category</a>
+        <a href="/Admin/Category/Create" class="btn btn-primary"><i class="fas fa-plus"></i> &nbsp; Create New Category</a>
     </div>
+
 </div>
 
 <br />
@@ -23,13 +24,15 @@
         </thead>
     </table>
 </div>
-<div class=" text-center">
-    <a href="/Admin/Catgory/Upsert/id" class="btn btn-success text-white" style="cursor:pointer">
+<div class="text-center">
+    <a href="/Admin/Category/Edit/id" class="btn btn-success text-white" style="cursor:pointer">
         <i class="fas fa-edit"></i>&nbsp;
     </a>
-    <a class="btn btn-danger text-white" style="cursor:pointer">
-        <i class=" fas fa-trash-alt"></i>&nbsp;
+    <a href="/Admin/Category/Delete/id" class="btn btn-danger text-white" style="cursor:pointer">
+        <i class="fas fa-trash-alt"></i>&nbsp;
     </a>
 </div>
+
+
 
 
