--- a/AbdulrhmanBookStore/Areas/Admin/Views/Category/Index.cshtml
+++ b/AbdulrhmanBookStore/Areas/Admin/Views/Category/Index.cshtml
@@ -25,6 +25,15 @@
     </table>
 </div>
 
+<div class="text-center">
+    <a href="/Admin/Category/Upsert/id" class="btn btn-success text-white" style="cursor:pointer">
+        <i class="fas fa-edit"></i>&nbsp;
+    </a>
+    <a class=" btn btn-danger text-white" stlye="cursor:pointer">
+        <i class="fas fa-edit"></i>&nbsp;
+    </a>
+</div>
+
 
 
 
