connected the category to index

--- a/AbdulrhmanBookStore/Areas/Admin/Views/Category/Index.cshtml
+++ b/AbdulrhmanBookStore/Areas/Admin/Views/Category/Index.cshtml
@@ -24,7 +24,9 @@
         </thead>
     </table>
 </div>
-
+@section Scrpits{
+                <script src="~/js/category.js"></script>
+            }
 
 
 
