edit index and category

--- a/AbdulrhmanBookStore/Areas/Admin/Views/Category/Index.cshtml
+++ b/AbdulrhmanBookStore/Areas/Admin/Views/Category/Index.cshtml
@@ -24,7 +24,7 @@
         </thead>
     </table>
 </div>
-@section Scrpits{
+@section Scripts{
                 <script src="~/js/category.js"></script>
             }
 
