--- a/AbdulrhmanBookStore/Views/Shared/_CreateAndBackToListButton.cshtml
+++ b/AbdulrhmanBookStore/Views/Shared/_CreateAndBackToListButton.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="row">
+﻿@model int
+<div class="row">
     <div class="col">
         <button type="submit" class="btn btn-primary form-control">Create</button>
     </div>
