--- a/AbdulrhmanBookStore/Areas/Admin/Views/Category/Upsert.cshtml
+++ b/AbdulrhmanBookStore/Areas/Admin/Views/Category/Upsert.cshtml
@@ -1,10 +1,16 @@
-﻿
+﻿@model AbdulrhmanBooks.Models.Category;
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
+    var title = "Create Category";
 }
 
 <form method="post">
     <div class="row p-3 border">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        @if (Model.Id != null) {
+
+            title = "Edit Category";
+        }
         <div class="col-12 border-bottom">
             <h2 class="text-primary">TITLE</h2>
         </div>
@@ -14,12 +20,20 @@
                     NAME
                 </div>
                 <div class="col-8">
-                    TEXTBOX FOR NAME
+                    <input asp-for="Name"class="form-control"/>
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
                 <div class="col-8 offset-4">
-                    EDIT | BACK
+                   @if(Model.Id != 0)
+            {
+                <partial name="_EditAndBackButton" model="Model.Id"/>
+            }
+            else
+            {
+                <partial name="_CreateAndToListButton"/>
+            }
                 </div>
             </div>
         </div>
