--- a/AbdulrhmanBookStore/Areas/Admin/Views/Category/Upsert.cshtml
+++ b/AbdulrhmanBookStore/Areas/Admin/Views/Category/Upsert.cshtml
@@ -7,10 +7,11 @@
 <form method="post">
     <div class="row p-3 border">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        @if (Model.Id != null) {
+        @if(Model.Id != null) {
 
             title = "Edit Category";
         }
+
         <div class="col-12 border-bottom">
             <h2 class="text-primary">@title</h2>
         </div>
@@ -28,11 +29,11 @@
                 <div class="col-8 offset-4">
                    @if(Model.Id != 0)
             {
-                <partial name="_EditAndBackButton" model="Model.Id"/>
+                <partial name="_EditAndBackToListButton" model="Model.Id" />
             }
             else
             {
-                <partial name="_CreateAndToListButton"/>
+                <partial name="_CreateAndToListButton" />
             }
                 </div>
             </div>
