Was getting errors, errors are fixed

--- a/AbdulrhmanBookStore/Areas/Admin/Views/Category/Upsert.cshtml
+++ b/AbdulrhmanBookStore/Areas/Admin/Views/Category/Upsert.cshtml
@@ -33,7 +33,7 @@
             }
             else
             {
-                <partial name="_CreateAndToListButton" />
+                <partial name="_CreateAndBackToListButton" />
             }
                 </div>
             </div>
